2.4.3
  - fixed typo https://github.com/igorkasyanchuk/rails_db/pull/136/files
  - fix for Rails 7.1 https://github.com/igorkasyanchuk/rails_db/pull/139/files
  - added dependency of sprockets-rails to fix issue with Rails 7.1 (assets.precompile files)

2.4.2
  - ransack fix https://github.com/igorkasyanchuk/rails_db/pull/132

2.4.1
  - Fix zeitwerk deprecation warning https://github.com/igorkasyanchuk/rails_db/pull/123/files
  - Fix for country field (show as string instead of using simple_form:country_select)

2.4.0
  - added sandbox option https://github.com/igorkasyanchuk/rails_db/pull/122 (virtual360-io)
  - fixing tests and moving to new travis domain
  - dummy app run with rails 6

2.3.0, 2.3.1
  - drop support Rails 5.2, 5.1, 5.0 (for older user version 2.2.1 of this gem)
  - required versions of gems (will_paginate >= 3.1, ransack >= 2.3.2)
  - fixed issue with ransack for Rails 6 and new ransack
  - migration to caxlsx / caxlsx-rails

2.2.0 + 2.2.1
  - use more secure version of Simple Form (>= 5.0.1)
  - use smaller amount of JS from codemirror
  - upgraded codemirror to 5.49.2
  - fixed SQL hit for SQL (now shows columns)
  - other minor gems upgrades

2.1.0
  - now using newer version of CodeMirror (bundled inside Rails DB)
  - support Rails 6
  - simplified matrix of tests on Travis CI (removed Rails 5.0, 5.1 from tests, but they are still supported)

2.0.6
  - require activerecord (to support non-RoR apps)

2.0.5
  - allow newer version of simple_form

2.0.4
  - support for simple_form 4.0+ only
  - added support for "tsvector" field type

2.0.3
  - fix for namespaces (e.g. /admin/tools/rails_db)

2.0
  - drop Rails 4.x support
  - verified support for Ruby 2.3+
  - removed not needed code

1.6
  - Bugfixes

1.4.0 - January 24, 2017
  - works with Rails 6
  - upgraded ransack
  - fixed STI

1.1 - December 31, 2015
  - code cleanup
  - bug fixes and optimizations (thanks @bbenezech)

1.0 - December 2, 2015
  - add CREATE functionality support