@@ -1,46 +1,0 @@
-language: ruby
-
-rvm:
-  - "2.6.3"
-
-gemfile:
-  - gemfiles/rails_6_0.gemfile
-
-before_install:
-  - gem install bundler
-  - gem install mime-types -v "~> 2.0"
-  - gem install paranoia
-  - gem install sqlite3 -v '~> 1.3.6'
-  - gem install sqlite3 -v '~> 1.4.2'
-
-before_deploy:
-  - gem install mime-types -v "~> 2.0"
-  - gem install paranoia
-
-services:
-  - mysql
-  - postgresql
-
-before_script:
-  - rm Gemfile.lock
-  - cp config/database.travis.yml config/database.yml
-  - cp config/database.travis.yml test/dummy/config/database.yml
-  - psql -c 'create database rails_db;' -U postgres
-  - mysql -e "drop database if exists rails_db;" -uroot
-  - mysql -e "create database IF NOT EXISTS rails_db;" -uroot
-
-cache: bundler
-
-bundler_args: --without development --jobs=3 --retry=3 --path=../vendor/bundle
-
-env:
-  - DB=sqlite
-  - DB=mysql
-  - DB=postgresql
-
-script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake test
-
-notifications:
-  email: false
