@@ -2,6 +2,7 @@ update users set age = 1 where id = 5;
 update users set age = 2 where id = 6;
 update users set age = 3 where id = 7;
 
+DROP TABLE IF EXISTS t;
 
 CREATE TABLE t (
   id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
