@@ -2,6 +2,8 @@ update users set age = 1 where id = 5;
 update users set age = 2 where id = 6;
 update users set age = 3 where id = 7;
 
+DROP TABLE IF EXISTS t;
+
 CREATE TABLE t (
     code        char(5) PRIMARY KEY,
     title       varchar(40) NOT NULL,
