@@ -2,4 +2,6 @@ update users set age = 11 where id = 1;
 update users set age = 22 where id = 2;
 update users set age = 33 where id = 3;
 
+DROP TABLE IF EXISTS t;
+
 CREATE TABLE t(x INTEGER, y, z, PRIMARY KEY(x ASC));
